# sevenzipjbinding

./: .cproject  .gitignore  .project  .travis.yml  AUTHORS  Android.mk  CMakeFile-bin-dist.txt  CMakeLists.txt  CTestConfig.cmake  ChangeLog  NEWS  README  README.7z  ReleaseNotes  ReleaseNotes.txt  THANKS  THANKS: Add new title  TODO  TODO-glib-dump.txt  release-notes.txt
.github/: FUNDING.yml
7zip/C/: Threads.c
CDT/: JavaFormatterCodeStyle
SevenZipCPP/: .cproject  .project  7-Zip-JBindind Code Style.xml  test.7z
SevenZipCPP/src/: !!!compile.txt  CLSIDs.h  JNICallState.cpp  JNICallState.h  JavaArchiveExtractCallback.cpp  JavaArchiveExtractCallback.h  JavaArchiveExtractCallbackImpl.cpp  JavaArchiveExtractCallbackImpl.h  JavaInArchiveImpl.cpp  JavaInStream.cpp  JavaInStream.h  JavaInterface.h  JavaProgressImpl.cpp  JavaProgressImpl.h  JavaSequentialInStream.cpp  JavaSequentialInStream.h  JavaSequentialOutStream.cpp  JavaSequentialOutStream.h  JavaSequentialOutStreamImpl.h  SevenZip.cpp  SevenZipBindingException.cpp  SevenZipBindingException.h  SevenZipException.cpp  SevenZipException.h  SevenZipJBinding.cpp  SevenZipJBinding.def  SevenZipJBinding.h  StdAfx.h  UniversalArchiveOpenCallback.cpp  UniversalArchiveOpenCallback.h  VM.cpp  VM.h  idd_def.cpp  jnitools.cpp  jnitools.h
SevenZipDoc/: .project  readme.txt  release-notes.txt
SevenZipDoc/web/: example.css  index.html  styles.css
SevenZipJava/: .classpath  .project  TODO.txt  build.properties  build.xml  property-table.txt  readme.txt
SevenZipJava/TestArchives/: TestContent-crypted.7z  TestContent-files-with-pass.7z  TestContent.7z  TestContent.rar
SevenZipTest/: .classpath  .project  build.properties  build.xml
SevenZipTest/TestArchives/: TestArchive1.7z
SevenZipTest/miscarchives/: crypted-filenames.7z  simplearchive.7z
SevenZipTest/tools/: 7z.sfx
android/: .gitignore
android-test-app/: .gitignore
cmake/: CheckGCC.cmake  FindJNIExtended.cmake  FindJavaExtended.cmake  FindMinGWm10-DLL.cmake  FindRuntimeLibrary.cmake
doc/: Build HTML.launch  GetNumberOfItemInArchive.java  build.xml  build_html.cmake  build_snipplets.cmake  property-table.txt
doc/web/: .gitignore  Copy of index.html  basic_snippets.html  compression_snippets.html  download.php  example.css  extraction_snippets.html  files.php  first_steps.html  index.html  ls-files.php  styles.css  upload.php  voting.php
doc/web.components/: .gitignore  acknowledgements.html  basic_snippets.html  compression_snippets.html  extraction_snippets.html  first_steps.html  footer.html  header.html  index.html  output_footer.html  snippet_header.html  styles.css
doc/web.scripts/: files.php
eclipse/: Build HTML.launch  CdtFormatterCodeStyle.xml  CodeStyle  JavaFormatterCodeStyle.xml  cmake-gui.launch
jbinding-cpp/: BaseSystem.h  CHeadCacheInStream.cpp  CHeadCacheInStream.h  CMakeLists.txt  Client7z.cpp  CodecTools.cpp  CodecTools.h  Debug.cpp  Debug.h  JBindingTools.cpp  JBindingTools.h  JNICallState.cpp  JNICallState.h  JNISession.h  JNITools.cpp  JNITools.h  JObjectList.h  JavaStaticInfo.cpp  JavaStaticInfo.h  SevenZipException.cpp  SevenZipException.h  SevenZipJBinding.cpp  SevenZipJBinding.h  UnicodeHelper.h  UniversalArchiveOpenCallback.cpp  UniversalArchiveOpenCallback.h  UserTrace.cpp  UserTrace.h  idd_def.cpp
jbinding-cpp/CPPToJava/: CPPToJavaAbstract.h  CPPToJavaArchiveExtractCallback.cpp  CPPToJavaArchiveExtractCallback.h  CPPToJavaArchiveOpenCallback.cpp  CPPToJavaArchiveOpenCallback.h  CPPToJavaArchiveOpenVolumeCallback.cpp  CPPToJavaArchiveOpenVolumeCallback.h  CPPToJavaArchiveUpdateCallback.cpp  CPPToJavaArchiveUpdateCallback.h  CPPToJavaCryptoGetTextPassword.cpp  CPPToJavaCryptoGetTextPassword.h  CPPToJavaInStream.cpp  CPPToJavaInStream.h  CPPToJavaOutStream.cpp  CPPToJavaOutStream.h  CPPToJavaProgress.cpp  CPPToJavaProgress.h  CPPToJavaSequentialInStream.cpp  CPPToJavaSequentialInStream.h  CPPToJavaSequentialOutStream.cpp  CPPToJavaSequentialOutStream.h
jbinding-cpp/JavaStatInfos/: InArchiveImpl.h  JavaPackageSevenZip.h  JavaStandardLibrary.h  PropertyInfo.h
jbinding-cpp/JavaToCPP/: JavaToCPPInArchiveImpl.cpp  JavaToCPPOutArchiveImpl.cpp  JavaToCPPSevenZip.cpp
jbinding-cpp/JavaToCPP/Java/: net_sf_sevenzip_SevenZip.h
jbinding-cpp/PlatformMinGW/: MyUser32.cpp  MyWindows.cpp  StdAfx.h
jbinding-cpp/PlatformUnix/: StdAfx.h
jbinding-java/: .project  CMakeLists.txt  TODO.txt
p7zip/: ChangeLog  README  install.sh  last_error  makefile  makefile.android_arm  makefile.crc32  makefile.freebsd  makefile.freebsd6  makefile.glb  makefile.linux_amd64  makefile.linux_amd64_asm  makefile.linux_amd64_asm_icc  makefile.linux_cross_s390x  makefile.linux_gcc_2.95_no_need_for_libstdc  makefile.linux_s390x  makefile.linux_x86_asm_gcc_4.X  makefile.linux_x86_asm_gcc_4.X_fltk  makefile.linux_x86_asm_gcc_mudflap_4.X  makefile.linux_x86_asm_icc  makefile.linux_x86_icc  makefile.linux_x86_ppc_alpha_gcc_4.X  makefile.machine  makefile.macosx_32bits  makefile.macosx_32bits_asm  makefile.macosx_32bits_ppc  makefile.macosx_64bits  makefile.macosx_llvm_64bits  makefile.oldmake  makefile.openbsd  makefile.openbsd_no_port  makefile.parallel_jobs  makefile.rules  makefile.save
p7zip/C/: 7zVersion.h  Aes.c  CpuArch.c  CpuArch.h  LzmaDec.i  LzmaDec.s  Sha1.c  XzDec.c
p7zip/Utils/: file_7zCon_sfx.py  file_7z_so.py  file_7za.py  file_7zr.py  generate.py
p7zip/check/: check.sh
scripts/: build-all-multiplatform-releases.sh  build-multiplatform-release.sh  doDebug-Linux.sh  doDebug-Win64.bat  doRelease-Linux.sh  doRelease-Win64.bat  download-all-files.sh  myscp.bat  update-file-in-packages.sh  upload-release.bat  upload-release.cmake  upload-release.sh
scripts/Mac/: doDebug-32.sh  doDebug-64.sh  doITTest.sh  doRelease-32.sh  doRelease-64.sh
scripts/Windows/: README.txt  doAll.bat  doDebug32.bat  doDebug64.bat  doITTest-32.sh  doITTest-64.sh  doITTest-all.sh  doITTest.bat  doITTest32.bat  doITTest64.bat  doRelease32.bat  doRelease32Upload.bat  doRelease64.bat  doRelease64Upload.bat  eclipseGen.bat  env-win.bat  env-win32.bat  env-win64-seh.bat  (+5 more)
(+1921 files in other folders)
